testsuite/tests/typecheck/should_fail/T22560_fail_a.stderr

T22560_fail_a.hs:7:1: error: [GHC-58589]
    Illegal invisible type variable binder: @k
    Suggested fix: Perhaps you intended to use TypeAbstractions
